--- a/.gitignore
+++ b/.gitignore
@@ -155,7 +155,7 @@ publish/
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
-# TODO: Comment the next line if you want to checkin your web deploy settings 
+# TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
 *.pubxml
 *.publishproj
@@ -219,3 +219,6 @@ FakesAssemblies/
 # VS project files
 *.vcxproj
 *.vcxproj.filters
+
+# generated protobuf sources
+generated_proto/
